--- a/CDTP_serial/CDTP_serial.csproj
+++ b/CDTP_serial/CDTP_serial.csproj
@@ -90,7 +90,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Arduino\SerialEventX\SerialEventX.ino" />
+    <None Include="Arduino\master\master.ino" />
+    <None Include="Arduino\SerialEventX_old\SerialEventX_old.ino" />
+    <None Include="Arduino\slave\slave.ino" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
